A messy import of cyanboot.  Doesn't build yet.  The menu and stuff should be in, but connecting the peices together is necessary.  Also, logo doesn't load and key detectoin isn't wired up.

--- a/board/omap3621_edp1/Makefile
+++ b/board/omap3621_edp1/Makefile
@@ -28,7 +28,8 @@ OBJS	:= \
 	omap3621_edp1.o \
 	sys_info.o \
 	mmc.o \
-	share_region.o
+	share_region.o \
+	menu.o
 
 $(LIB):	$(OBJS)
 	$(AR) crv $@ $^
